resources/testcases_static_checks/tests/positive/isJointlyFrontierGuarded/unguarded-cq-entailment-2.rls
../../../tests_common_data/rule-classification-examples/unguarded-cq-entailment-2.rls