resources/testcases_static_checks/tests/negative/isJoinless/oblivious-non-terminating-2.rls
../../../tests_common_data/rule-classification-examples/oblivious-non-terminating-2.rls